commit configuração SMTP recuperação de senha

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,11 @@ DB_PORT=3306
 DB_DATABASE=portalVagas
 DB_USERNAME=root
 DB_PASSWORD=
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_ENCRYPTION=tls
+MAIL_USERNAME=portalvagass@gmail.com
+MAIL_PASSWORD=dT93v7~aeSWy^EZ
+MAIL_FROM_ADDRESS=laraveling@gmail.com
