ajustado env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,21 +1,21 @@
-APP_NAME=Portal_de_Vagas
-APP_ENV=local
+APP_NAME='Portal de Vagas'
+APP_ENV=
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=
+APP_URL=
 
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=portalVagas
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_ENCRYPTION=tls
-MAIL_USERNAME=portalvagass@gmail.com
-MAIL_PASSWORD=dT93v7~aeSWy^EZ
-MAIL_FROM_ADDRESS=laraveling@gmail.com
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_ENCRYPTION=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=
